# assignment-cpp-

./: .gitignore  CMakeLists  CMakeLists.txt  ast.h  codegen.cpp  codegen.h  lexer.h  parser.cpp  parser.h  semantic.cpp  semantic.h  token.h
compiler_inputs(1)/: strength_reduction_test.tc
src/: ast.h  codegen.cpp  codegen.h  lexer(2).cpp  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic.cpp  semantic.h  token.cpp  token.h
src/src/: ast.h  codegen.h  main.cpp  parser.cpp
